--- a/content/project/Hazing Project/Project 1 Md.Rmd
+++ b/content/project/Hazing Project/Project 1 Md.Rmd
@@ -9,9 +9,9 @@ output:
     toc: true
 menu:
   docs:
-    parent: "Factor"
-    weight: 1
     
+    parent: "Hazing Experimental Survey Project"
+    weight: 1
 type: docs
 tag:
  - Hazing Project
