--- a/content/project/1984-Text-Analysis/EDP 693e 1984 Text Markdown.Rmd
+++ b/content/project/1984-Text-Analysis/EDP 693e 1984 Text Markdown.Rmd
@@ -4,14 +4,16 @@ author: "C. Jackson"
 date: "March 16, 2021"
 summary: A Text analysis of 1984 by George Orwell.
 linktitle: "1984 Text Analysis"
+
 output:
   blogdown::html_page:
     toc: true
 menu:
   docs:
+    parent: "Text Analysis of 1984"
+    weight: 1
     
-    parent: "Text Analysis"
-    weight: 2
+    
 type: docs
 tag:
   - Orwell
