--- a/content/project/Hazing Project/Project 1 Md.Rmd
+++ b/content/project/Hazing Project/Project 1 Md.Rmd
@@ -10,8 +10,8 @@ output:
 menu:
   docs:
     
-    parent: "Hazing Experimental Survey Project"
-    weight: 1
+    parent: "Projects"
+    weight: 3
 type: docs
 tag:
  - Hazing Project
