--- a/content/project/1984-Text-Analysis/EDP 693e 1984 Text Markdown.Rmd
+++ b/content/project/1984-Text-Analysis/EDP 693e 1984 Text Markdown.Rmd
@@ -10,8 +10,8 @@ output:
     toc: true
 menu:
   docs:
-    parent: "Text Analysis of 1984"
-    weight: 1
+    parent: "Projects"
+    weight: 2
     
     
 type: docs
