--- a/content/project/Hazing Project/Project 1 Md.Rmd
+++ b/content/project/Hazing Project/Project 1 Md.Rmd
@@ -20,7 +20,7 @@ editor_options:
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(echo = FALSE, warning = FALSE, message = FALSE, fig.show = TRUE)
 ```
 
 
@@ -28,7 +28,7 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ## Data Prep and Cleaning
 
-```{r Preparation and Cleaning, message=FALSE, warning=FALSE}
+```{r Preparation and Cleaning, include=FALSE}
 library(tidyverse)
 library(DT)
 library(RColorBrewer)
@@ -236,7 +236,7 @@ ggplot(HazingSurveyData, aes(fct_infreq(Punishment), fill = Punishment)) +
 
 ## General Views about Hazing Plots
 
-```{r fig.height=6, fig.width=8, message=FALSE, warning=FALSE}
+```{r fig.height=8, fig.width=8, message=FALSE, warning=FALSE}
 
 plot(Likertdf2, col = LiPal2) +
   labs(title = "Students' General Views about Hazing") +
