--- a/content/project/Academic-Self-Concept-Project/Academic-Self-Project.Rmd
+++ b/content/project/Academic-Self-Concept-Project/Academic-Self-Project.Rmd
@@ -7,15 +7,15 @@ slug: Academic-Self-Project
 linktitle: "Academic Self and Careerism"
 output:
   blogdown::html_page:
-    toc: true
     
+    toc: true
 menu:
   docs:
     parent: "Projects"
     weight: 1
 type: docs
 editor_options: 
-  chunk_output_type: console
+  chunk_output_type: inline
 lastmod: '2021-04-24T23:09:32-04:00'
 featured: no
 projects: []
@@ -46,7 +46,7 @@ Download the survey [here.](/media/Survey on Academic Self.pdf)
 
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = FALSE, warning = FALSE, message = FALSE)
+knitr::opts_chunk$set(echo = FALSE, warning = FALSE, cache = TRUE)
 
 
 load("AcadSelfData.Rdata")
@@ -55,6 +55,10 @@ load("AcadLikertData.Rdata")
 
 AcadSelfData$GPA <- plyr::mapvalues(AcadSelfData$GPA, from = "I don't have a GPA (First-semester freshmen)", to = "I don't know.") 
 AcadSelfData$GPA <- plyr::mapvalues(AcadSelfData$GPA, from = "4", to = "4.0")
+
+AcadLikertData2 <- AcadLikertData[, c(1:6, 8:18)]
+cols <- colnames(AcadLikertData2)
+
 
 ```
 
@@ -65,6 +69,18 @@ library(ggthemes)
 library(extrafont)
 library(plotly)
 library(viridis)
+library(ggpubr)
+library(data.table)
+library(rcompanion)
+library(DescTools)
+library(summarytools)
+library(ordinal)
+library(MASS)
+library(qqplotr)
+library(widgetframe)
+library(htmltools)
+library(htmlwidgets)
+library(htmlTable)
 ```
 
 
@@ -196,7 +212,7 @@ ggplot(AcadSelfData, aes(GPA2, fill = GPA2)) +
 
 
 
-```{r Likert Scale Statements, fig.width = 8, fig.height = 8}
+```{r Likert Scale Statements, fig.height=8, fig.width=8}
 p <- plot(likert(AcadLikertData), col = sevenColors) +
   labs(title = "Level of Agreement Questions") +
   theme(legend.position = "none",
@@ -217,6 +233,16 @@ p <- plot(likert(AcadLikertData), col = sevenColors) +
 ggplotly(p)
 
 ```
+
+```{r}
+
+round(PairApply(AcadLikertData2, CramerV, symmetric = FALSE), 4) %>% 
+  data.table()
+
+```
+
+
+
 
 # **Analysis**
 
@@ -243,6 +269,141 @@ ggplot(AcadSelfData, aes(PassionImportant, fill = PassionImportant)) +
   scale_fill_viridis(discrete = TRUE,
                      direction = -1)
 
+
+
+
+```
+
+
+
+
+```{r}
+
+more_imp <- AcadSelfData[,c(16:17) ]
+
+
+for(i in 1:ncol(more_imp)){
+  
+  levels(more_imp[, i]) <- c("1", "2", "3", "4", "5")
+  
+}
+
+
+more_imp <- as.data.frame(apply(more_imp, 2,as.numeric))
+
+
+
+more_imp <- more_imp %>% 
+  mutate(impscore = case_when(PassionImportant > CareerImportant ~ "Passion",
+                              CareerImportant > PassionImportant ~ "Career",
+                              CareerImportant == PassionImportant ~ "Equal"))
+
+more_imp <- more_imp %>% 
+  mutate(v = PassionImportant - CareerImportant)
+
+
+AcadSelfData$more_imp <- more_imp$impscore
+AcadSelfData$impscore <- more_imp$v
+
+AcadSelfData <- AcadSelfData %>% 
+  mutate(ImSTEM = case_when(STEMmaj == "Yes" ~ "Yes",
+                            STEMmaj == "Maybe/Unsure" ~ "Maybe/Unsure",
+                            STEMmaj == "No" ~ "No",
+                            TRUE ~ "No"))
+
+```
+
+
+```{r}
+ggline(AcadSelfData, x = "Majorgrouped2", y = "impscore", 
+       add = c("mean_se", "jitter"),
+       ylab = "Score",
+       xlab = "",
+       title = "",
+       point.color = "red",
+       point.size = 1,
+       color = "black",
+       add.params = list(alpha = 0.5)) +
+       rotate_x_text(angle = 45)
+
+
+
+```
+
+
+```{r echo=FALSE}
+table1 <- AcadSelfData %>%
+  group_by(Majorgrouped2) %>%
+  rename("Major?" = "Majorgrouped2") %>% 
+  summarise(n = n(), 
+            mean = round(mean(impscore, na.rm = TRUE), 2), 
+            sd = round(sd(impscore, na.rm = TRUE), 2),
+            stderr = round(sd/sqrt(n), 2),
+            LCL = round((mean - qt(1 - (0.05 / 2), n - 1) * stderr), 2),
+            UCL = round((mean + qt(1 - (0.05 / 2), n - 1) * stderr), 2),
+            median = median(impscore, na.rm = TRUE),
+            min = min(impscore, na.rm = TRUE), 
+            max = max(impscore, na.rm = TRUE),
+            IQR = IQR(impscore, na.rm = TRUE),
+            W.Stat = round((shapiro.test(impscore)$statistic), 4),
+            p.value = round((shapiro.test(impscore)$p.value), 2)) %>% 
+      data.table::data.table()
+
+
+table1
+
+
+
+broom::tidy(kruskal.test(impscore ~ Majorgrouped2, AcadSelfData)) %>%
+  data.table::data.table()
+
+```
+
+
+```{r}
+
+
+ggline(AcadSelfData, x = "ImSTEM", y = "impscore", 
+       add = c("mean_se", "jitter"),
+       ylab = "Score",
+       xlab = "",
+       title = "Major",
+       point.color = "red",
+       point.size = 1,
+       color = "black",
+       add.params = list(alpha = 0.5))
+
+
+
+
+AcadSelfData %>%
+  group_by(STEMmaj) %>%
+  rename("STEM?" = "STEMmaj") %>% 
+  summarise(n = n(), 
+            mean = round(mean(impscore, na.rm = TRUE), 2), 
+            sd = round(sd(impscore, na.rm = TRUE), 2),
+            stderr = round(sd/sqrt(n), 2),
+            LCL = round((mean - qt(1 - (0.05 / 2), n - 1) * stderr), 2),
+            UCL = round((mean + qt(1 - (0.05 / 2), n - 1) * stderr), 2),
+            median = median(impscore, na.rm = TRUE),
+            min = min(impscore, na.rm = TRUE), 
+            max = max(impscore, na.rm = TRUE),
+            IQR = IQR(impscore, na.rm = TRUE),
+            W.Stat = round((shapiro.test(impscore)$statistic), 4),
+            p.value = round((shapiro.test(impscore)$p.value), 2)) %>% 
+  data.table::data.table()
+
+
+
+broom::tidy(kruskal.test(impscore ~ ImSTEM, AcadSelfData)) %>% 
+  data.table() 
+
+```
+
+
+
+
+```{r}
 ggplot(AcadSelfData, aes(passion_vs_career, fill = passion_vs_career)) +
   geom_bar(show.legend = FALSE) +
   geom_text(aes(label = ..count..), stat = "count", hjust = -0.5) +
@@ -252,9 +413,9 @@ ggplot(AcadSelfData, aes(passion_vs_career, fill = passion_vs_career)) +
   coord_flip() +
   ylim(0, 300) +
   theme(plot.title.position = "plot")
-
-
 ```
+
+
 
 
 
@@ -334,6 +495,8 @@ ggplot(AcadSelfData, aes(money_issue, fill = money_issue)) +
 
 
 ```
+
+## **Limitations**
 
 
 # **References**
